# agentscaffold

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md  ci-integration.md  configuration.md  creating-domain-packs.md  domain-packs.md  eval-findings-and-improvement-plan.md  getting-started.md  importing-conversations.md  platform-integration.md  semi-autonomous-guide.md  user-guide.md
eval/: __init__.py  conftest.py  evaluator.py  pytest.ini  report.py  runner.py
eval/replay/: __init__.py  metrics.py  parser.py
eval/replay/fixtures/: mixed_behavior_trace.jsonl
eval/reports/: latest.md
eval/scenarios/: __init__.py  conftest.py  test_adoption.py  test_benchmarks.py  test_cli_smoke.py  test_conversation_replay.py  test_edge_cases.py  test_efficiency.py  test_lifecycle.py  test_mcp_tools.py  test_readability.py  test_replay_adoption.py  test_review_quality.py
eval/sim_project/: scaffold.yaml
eval/sim_project/config/: settings.py
eval/sim_project/docs/studies/: STU-2026-01-15-cache-ttl-comparison.md
eval/sim_project/extensions/: go_utils.go  rust_helper.rs
eval/sim_project/libs/data/: __init__.py  cache.py  normalizer.py  router.py
eval/sim_project/libs/execution/: __init__.py  engine.py
eval/sim_project/libs/risk/: __init__.py  manager.py  position_sizer.py
eval/sim_project/libs/strategy/: __init__.py  base.py  mean_reversion.py  momentum.py
eval/sim_project/pipeline/flows/: daily_ingest.py  signal_generation.py
eval/sim_project/services/api/: middleware.py  routes.py
eval/sim_project/tests/integration/: test_pipeline.py
eval/sim_project/tests/unit/: test_cache.py  test_normalizer.py  test_risk.py  test_router.py  test_strategy.py
src/agentscaffold/: __init__.py  cli.py  config.py  init_cmd.py  rendering.py
src/agentscaffold/agents/: claude.py  cursor.py  generate.py  prompt.py  rule_policy.py  windsurf.py
src/agentscaffold/ci/: __init__.py  setup.py
src/agentscaffold/domain/: loader.py  registry.py
src/agentscaffold/domain_packs/: __init__.py  registry.py
src/agentscaffold/domains/api_services/: manifest.yaml
src/agentscaffold/domains/data_engineering/: manifest.yaml
src/agentscaffold/domains/embedded/: manifest.yaml
src/agentscaffold/domains/game_dev/: manifest.yaml
src/agentscaffold/domains/infrastructure/: manifest.yaml
src/agentscaffold/domains/mlops/: manifest.yaml
src/agentscaffold/domains/mobile/: manifest.yaml
src/agentscaffold/domains/research/: manifest.yaml
src/agentscaffold/domains/trading/: manifest.yaml
src/agentscaffold/domains/webapp/: manifest.yaml
src/agentscaffold/graph/: __init__.py  calls.py  communities.py  embeddings.py  governance.py  imports.py  incremental.py  parsing.py  pipeline.py  queries.py  schema.py  search.py  sessions.py  store.py  structure.py  symbol_table.py  verify.py
src/agentscaffold/import_cmd/: chatgpt.py  claude.py  markdown.py  router.py
src/agentscaffold/mcp/: __init__.py  server.py
src/agentscaffold/metrics/: __init__.py  dashboard.py
src/agentscaffold/notify/: __init__.py  sender.py
src/agentscaffold/plan/: create.py  lint.py  status.py
src/agentscaffold/retro/: check.py
src/agentscaffold/review/: __init__.py  brief.py  challenges.py  feedback.py  gaps.py  queries.py  verify.py
src/agentscaffold/spike/: create.py
src/agentscaffold/study/: create.py  lint.py  list_cmd.py
src/agentscaffold/taskrunner/: __init__.py  setup.py
src/agentscaffold/templates/: scaffold_yaml.yaml.j2
src/agentscaffold/templates/agents/: agents_md.md.j2  cursor_rules.md.j2
src/agentscaffold/templates/ci/: github_ci.yml.j2  github_security.yml.j2  github_semi_autonomous.yml.j2
src/agentscaffold/templates/contracts/: contract_template.md.j2  contracts_readme.md.j2
src/agentscaffold/templates/core/: adr_template.md.j2  plan_review_checklist.md.j2  plan_template.md.j2  plan_template_bugfix.md.j2  plan_template_refactor.md.j2  session_summary.md.j2  spike_template.md.j2  study_template.md.j2
src/agentscaffold/templates/pr/: pull_request_template.md.j2
src/agentscaffold/validate/: integration.py  orchestrator.py  prohibitions.py  safety.py  secrets.py
tests/: conftest.py  test_agents.py  test_ci_taskrunner.py  test_cli_graph_wiring.py  test_config.py  test_domain.py  test_governance_and_review.py  test_graph_pipeline.py  test_graph_store.py  test_import.py  test_incremental_and_sessions.py  test_init.py  test_plan.py  test_search_and_communities.py  test_study.py  test_template_integration.py  test_validate.py
(+123 files in other folders)
