[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentscaffold"
version = "0.1.0"
description = "Structured AI-assisted development framework with plan lifecycle, review gates, and continuous improvement."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Dave Robb" },
]
keywords = [
    "ai",
    "agent",
    "development",
    "workflow",
    "scaffolding",
    "cursor",
    "claude",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
graph = [
    "kuzu>=0.4.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
]
graph-go = ["tree-sitter-go>=0.23.0"]
graph-rust = ["tree-sitter-rust>=0.23.0"]
graph-java = ["tree-sitter-java>=0.23.0"]
graph-c = ["tree-sitter-c>=0.23.0"]
graph-cpp = ["tree-sitter-cpp>=0.23.0"]
graph-all-languages = [
    "agentscaffold[graph,graph-go,graph-rust,graph-java,graph-c,graph-cpp]",
]
search = [
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
]
communities = [
    "graspologic>=3.4.0",
]
mcp = [
    "mcp>=1.0.0",
]
all = [
    "agentscaffold[graph,graph-all-languages,search,communities,mcp]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
    "agentscaffold[graph,mcp]",
]

[project.scripts]
scaffold = "agentscaffold.cli:app"

[project.urls]
Homepage = "https://github.com/drobbster/agentscaffold"
Documentation = "https://github.com/drobbster/agentscaffold#readme"
Repository = "https://github.com/drobbster/agentscaffold"
Issues = "https://github.com/drobbster/agentscaffold/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentscaffold"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = ["tests/fixtures", "eval"]

[tool.mypy]
python_version = "3.10"
strict = true
